--- a/routes/index.css
+++ b/routes/index.css
@@ -1,3 +1,3 @@
 html, body {
-  font-family: sohne, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Inter", "TwitterChirp", "-apple-system", "BlinkMacSystemFont", "Segoe UI", "Roboto", "Helvetica", "Arial", "sans-serif";
 }
