--- a/static/index.css
+++ b/static/index.css
@@ -1,3 +1,5 @@
 html, body {
   font-family: "Inter", "TwitterChirp", "-apple-system", "BlinkMacSystemFont", "Segoe UI", "Roboto", "Helvetica", "Arial", "sans-serif";
+  margin: 0;
+  min-height: 100vh;
 }
